--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,12 +11,12 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.x]
+        python-version: [3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
