--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,4 +19,4 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        gunicorn --bind 0.0.0.0:8000 WINR.wsgi &
+        nohup gunicorn --bind 0.0.0.0:8000 WINR.wsgi &
