--- a/echosystem.config.json
+++ b/echosystem.config.json
@@ -2,7 +2,7 @@
   "apps": [
     {
       "name": "winrapi",
-      "script": "manage.py runserver",
+      "script": " runserver",
       "args": ["runserver", "0.0.0.0:8000"],
       "exec_mode": "fork",
       "instances": "1",
