--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,4 +19,4 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        bash run.sh
+        gunicorn --bind 0.0.0.0:8000 WINR.wsgi --workers 3 --daemon
