--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -20,3 +20,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         gunicorn --bind 0.0.0.0:8000 WINR.wsgi --workers 3 --daemon
+        echo "hello"
