--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,5 +19,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        nohup gunicorn --bind 0.0.0.0:8000 WINR.wsgi --workers 3
+        nohup gunicorn --bind 0.0.0.0:8000 WINR.wsgi --workers 3 &
         echo "hello"
