--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,3 +19,4 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pm2 restart winrapi
